--- a/frontend/src/components/Routes/Register/Regiter.css
+++ b/frontend/src/components/Routes/Register/Regiter.css
@@ -1,5 +1,6 @@
 .sign-form {
     border: 1px solid #1EAAAD;
+    background-color: white;
 }
 .sign-form input {
     border: 1px solid #1EAAAD;
@@ -12,10 +13,10 @@
 } 
 .white-ground {
     position: absolute;
-    background-color: white;
+    background-color: #eee;
     width: 100%;
     height: 100vh;
     top: 0;
     left: 0;
-    z-index: 9;
+    z-index: 19;
 }
